# PowerSpawn

./: .gitignore  .gitmodules  .mcp.json  DESIGN-fleet-agents.md  DESIGN.md  MCP_DESIGN.md  README.md  TODO.md  __init__.py  __main__.py  agent_manager.py  api_keys.example.json  api_providers.py  config.py  context.py  context_loader.py  logger.py  mcp_server.py  models.json  parser.py  proc.py  pyproject.toml  requirements.txt  spawner.py
.github/workflows/: deploy-site.yml
examples/: api_spawn.py  basic_spawn.py
providers/: __init__.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  gemini_cli.py  grok.py  grok_api.py  mistral.py  types.py
site/: index.html  vite.config.ts
site/public/: CNAME
site/src/: App.tsx  index.css
site/src/components/: Comparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  McpOverview.tsx  QuickStart.tsx  Roadmap.tsx
tests/: README.md  __init__.py  conftest.py  test_agent_manager.py  test_config.py  test_imports.py  test_logger.py  test_mcp_server.py  test_mistral_parser.py  test_parser.py
