[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerspawn"
version = "0.2.0"
description = "Universal Multi-Agent MCP Server for Claude and Codex orchestration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CynaCons", email = "cynacons@example.com"}
]
maintainers = [
    {name = "CynaCons"}
]
keywords = [
    "mcp",
    "claude",
    "codex",
    "ai",
    "agent",
    "orchestration",
    "multi-agent",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/CynaCons/PowerSpawn"
Documentation = "https://github.com/CynaCons/PowerSpawn#readme"
Repository = "https://github.com/CynaCons/PowerSpawn.git"
Issues = "https://github.com/CynaCons/PowerSpawn/issues"

[project.scripts]
powerspawn = "powerspawn.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["powerspawn*"]

[tool.setuptools.package-data]
powerspawn = ["schemas/*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
